--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </form>
     </div>
 
-    <script src="https://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+<!--     <script src="https://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.9.0/date_fns.min.js" integrity="sha256-knF+s9L9ZDzFye6zMs8D2kBqlEdsWXSnTSNDmyADS9A=" crossorigin="anonymous"></script>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
